--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -18,7 +18,7 @@
 
   if params[:json]
 
-    components_in=["STARTING_FARE","MOVING_FARE","WAITING_FARE","VAT"];
+    components_in=["STARTING_FARE","MOVING_FARE","WAITING_FARE","VAT","REGULATOR_FEE"];
 
     total_min = 0;
     total_max = 0;
@@ -104,7 +104,7 @@
             <% else %>
             -
             <% end %>
-            
+
 
 
             <p>MAX - other price components</p>
